tests/errors/slice_step_zero.py
# expect_error: ValueError
# expect_error: slice step cannot be zero
x = [1, 2, 3]
y = x[::0]
